css fixes for mobile, date translated to readable format

--- a/src/App.css
+++ b/src/App.css
@@ -119,12 +119,10 @@ a {
   overflow: scroll;
   height: 90vh;
   min-width: 370px;
-
   background-color: rgb(133, 160, 201);
 }
 
 .article-card {
-  /* border: 1px solid black; */
   margin: 1rem;
   display: grid;
   grid-template-columns: 3rem 1fr;
@@ -177,7 +175,6 @@ a {
 
 .toggle-show-true {
   box-shadow: inset 0px 0px 15px 3px #455c83;
-  /* background: linear-gradient(to bottom, #6380b3 5%, #9fb0d1 100%); */
   border-radius: 1em 1em 0 0;
   background-color: #4b6da8;
   border: 1px solid #1f2f47;
@@ -195,7 +192,6 @@ a {
   cursor: pointer;
   color: #000000;
   padding: 6px 13px;
-  /* text-shadow: 0px 1px 0px #263666; */
 }
 
 #submit-comment-container {
@@ -254,7 +250,7 @@ form {
 }
 .comment-sidebar {
   grid-area: sidebar;
-  background-color: rgb(255, 228, 228);
+  background-color: #eeeeee;
   display: flex;
   border-radius: 0.5em 0 0 0.5em;
   flex-direction: column;
@@ -316,7 +312,7 @@ form {
 }
 
 #filtered-by-text {
-  font-size: 20px;
+  font-size: 100%;
   line-height: 0;
   color: white;
 }
@@ -336,7 +332,6 @@ form {
 
 #topic-list {
   background-color: rgb(255, 255, 255);
-  /* grid-area: 1/1/2/3; */
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
@@ -396,13 +391,17 @@ form {
   background-color: darkred;
 }
 
+.user-list-container{
+height: 90vh;
+overflow-y: scroll;
+}
+
 #user-list {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   padding: 2rem;
   flex-wrap: wrap;
-  overflow-y: scroll;
 }
 
 .user-card {
@@ -500,9 +499,12 @@ form {
 .loading-container {
   display: flex;
   justify-content: center;
-  margin: 2rem;
-  background-color: white;
-  height: 100%;
+  align-items: center;
+  margin: auto;
+  background-color: rgb(255, 255, 255);
+  height: 100vh;
+  width: 100%;
+ 
 }
 
 .loading {
